--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf8"/>
     <title>Fleeting Thoughts</title>
+    <script type="text/javascript" src="lib/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript" src="lib/underscore-min.js"></script>
+    <script type="text/javascript" src="lib/backbone-min.js"></script>
+    <script type="text/javascript" src="dist/fleeting-thoughts.min.js"></script>
+    <script type="text/javascript" src="js/setup.js"></script>
   </head>
   <body>
     <h1>Fleeting Thoughts</h1>
