--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf8"/>
     <title>Fleeting Thoughts</title>
+    <link href="css/fleeting-thoughts.css" rel="stylesheet">
     <script type="text/javascript" src="lib/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="lib/underscore-min.js"></script>
     <script type="text/javascript" src="lib/backbone-min.js"></script>
